[package]
name = "hysteresis"
version = "0.0.0"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
const-str = "0.5.7"
num-traits = "0.2.19"
vapoursynth4-rs = { git = "https://github.com/inflation/vapoursynth4-rs", rev = "7c1b3b8cd3c3b7b4c7d09e174cd43fb853128ec8" }

[profile.release]
codegen-units = 1
lto = true
