[package]
name = "hysteresis"
version = "1.0.1"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
const-str = "0.5.7"
num-traits = "0.2.19"
vapours = { git = "https://github.com/sgt0/vapours.git", rev = "350f7e6e4eb9274d8c2cf58a1dfda9cd8e56a489" }
vapoursynth4-rs = { git = "https://github.com/inflation/vapoursynth4-rs", rev = "05216423fb4316bf29f4e592ffc12c5a6e61bc25" }

[profile.release]
codegen-units = 1
lto = true
