[project]
name = "vapoursynth-hysteresis"
version = "1.1.3"
description = "Hysteresis filter as a VapourSynth plugin."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE.md"]

dependencies = ["vapoursynth>=75"]

[dependency-groups]
dev = [
    "ruff==0.15.12",
]

[build-system]
requires = ["hatchling==1.29.0", "packaging==26.2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["vapoursynth/plugins/hysteresis"]
artifacts = [
    "vapoursynth/plugins/hysteresis/*.dylib",
    "vapoursynth/plugins/hysteresis/*.so",
    "vapoursynth/plugins/hysteresis/*.dll",
    "vapoursynth/plugins/hysteresis/manifest.vs",
]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "FA", "UP", "B", "SIM", "I", "RUF022"]
ignore = []

[tool.cibuildwheel]
skip = [
    "*-musllinux_i686",   # Rust does not provide Cargo for musllinux 32-bit.
    "*-musllinux_x86_64", # musllinux 64-bit does not support cdylib.
]

[tool.cibuildwheel.macos.environment]
# Rust's minimum macOS target is 10.12.
MACOSX_DEPLOYMENT_TARGET = "10.12"
